2009-12-27  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
	    Daniel Kraft  <d@domob.eu>

	PR fortran/22552
	* gfortran.dg/warn_implicit_procedure_1.f90: New test.

2009-12-24  Jason Merrill  <jason@redhat.com>

	PR c++/41305
	* g++.dg/lookup/koenig9.C: New test.
	* g++.dg/lookup/koenig10.C: New test.
	* g++.dg/lookup/koenig11.C: New test.
	* g++.dg/lookup/koenig12.C: New test.

2009-12-24  Julian Brown  <julian@codesourcery.com>
            Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

        PR target/40887
	* gcc.target/arm/pr40887.c: New test.

2009-12-23  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/42475
	* gcc.dg/pr42475.c: New test.

2009-12-23  Jakub Jelinek  <jakub@redhat.com>
	    Cary Coutant  <ccoutant@google.com>

	PR debug/42454
	* gcc.dg/debug/dwarf2/aranges-fnsec-1.c: Add check for .debug_ranges.

2009-12-23  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

        PR target/42093
        * gcc.target/arm/pr42093.c: New test.

2009-12-23  Ramana Radhakrishnan  <ramrad01@arm.com>

	PR target/40670
	* gcc.target/arm/pr40670.c: New test.
	
2009-12-23  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/alpha/20000715-1.c: Remove target selector.
	* gcc.target/alpha/20011018-1.c: Ditto.
	* gcc.target/alpha/980217-1.c: Ditto.
	* gcc.target/alpha/asm-1.c: Ditto.
	* gcc.target/alpha/base-1.c: Ditto.
	* gcc.target/alpha/base-2.c: Ditto.
	* gcc.target/alpha/cix-1.c: Ditto.
	* gcc.target/alpha/cix-2.c: Ditto.
	* gcc.target/alpha/max-1.c: Ditto.
	* gcc.target/alpha/max-2.c: Ditto.

2009-12-23  Sebastian Pop  <sebpop@gmail.com>

	* g++.dg/graphite/id-1.C: New.
	* g++.dg/graphite/pr41305.C: New.
	* gcc.dg/graphite/id-16.c: New.
	* gcc.dg/graphite/interchange-10.c: New.
	* gcc.dg/graphite/interchange-11.c: New.
	* gcc.dg/graphite/interchange-mvt.c: New.
	* gcc.dg/graphite/pr40281.c: New.
	* gcc.dg/graphite/run-id-2.c: New.
	* gcc.dg/graphite/scop-dsyr2k.c: New.
	* gcc.dg/graphite/scop-dsyrk.c: New.
	* gcc.dg/graphite/scop-mvt.c: New.