@@ -1,3 +1,8 @@
+2009-12-27  Martin Jambor  <mjambor@suse.cz>
+
+	PR tree-optimization/42231
+	* gcc.c-torture/execute/pr42231.c: New test.
+	
 2009-12-27  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
 	    Daniel Kraft  <d@domob.eu>
 
